--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TheMoment</string>
+    <string name="Join_Room_Button">Join Room</string>
+    <string name="Create_Room_Key">Create Room</string>
+    <string name="Join_Random_Room_Button">Join Random Room</string>
 </resources>
