Added Create room design, to add: functionality for button and generate room nbr

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="room_nbr">Enter room number:</string>
     <string name="user_name">Add username:</string>
     <string name="confirm">Confirm</string>
+    <string name="YourRoomNbr">Your room number is:</string>
+    <string name="AmountChairs">Enter amount of chairs:</string>
+    <string name="createRoom">Create Room</string>
 </resources>
