--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="AmountPlayers">Enter amount of players:</string>
     <string name="RRNumber">Your random room number is:</string>
     <string name="JoinG">Join Game</string>
+    <string name="WaitingForPlayers">Waiting for players to join the game</string>
+    <string name="NbrOfJoined">Players has currently joined</string>
 </resources>
