Fixed vote on claim page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="waiting_claim">Waiting for claim...</string>
     <string name="trueClaim">True</string>
     <string name="falseClaim">False</string>
+    <string name="Claim">This should be the claim....</string>
 </resources>
