--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="waiting_claim">Waiting for claim...</string>
     <string name="trueClaim">True</string>
     <string name="falseClaim">False</string>
+    <string name="input_claim">State your claim</string>
+    <string name="submit">Submit</string>
 </resources>
