--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="falseClaim">False</string>
     <string name="input_claim">State your claim</string>
     <string name="submit">Submit</string>
+    <string name="T_or_F">True or False?</string>
+    <string name="claim_present">Claim to vote on</string>
 </resources>
