--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="submit">Submit</string>
     <string name="T_or_F">True or False?</string>
     <string name="claim_present">Claim to vote on</string>
+    <string name="Current_Room">Room:</string>
 </resources>
