Fixed a shortcut to Write claim page, also fixed radiobuttons to only accept one alternative. Related to trello card about "Write Claim overall functionality like radiobuttons". The added outcommented code are just me testing some, it should be the read in claim and send to server part...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="scores">Scores</string>
     <string name="False">False</string>
     <string name="True">True</string>
+    <string name="DebugWriteClaim">DebugWriteClaim</string>
 </resources>
