Result Page - setup necessary functionality and network coms - added send setIsPlayer - added a player comparator - added a call to DB for rooms current status - added a callback for resultPage - added to replaceCurrPlayer as to also fix isPlayer for clients room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,6 @@
     <string name="True">True</string>
     <string name="DebugWriteClaim">DebugWriteClaim</string>
     <string name="saveUserName">Save Username</string>
+    <string name="NewRound">New Round</string>
+    <string name="Quit">Quit</string>
 </resources>
