- added progressbar to result list to inform player that they are still waiting for people - added round number to checkIfRoundComplete - changed PlayerName to playerData in voteOnClaim

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,5 @@
     <string name="saveUserName">Save Username</string>
     <string name="NewRound">New Round</string>
     <string name="Quit">Quit</string>
+    <string name="wait_for_players">Waiting for all to finish</string>
 </resources>
