--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="NewRound">New Round</string>
     <string name="Quit">Quit</string>
     <string name="wait_for_players">Waiting for all to finish</string>
+    <string name="myClaim">Your claim is being voted on</string>
 </resources>
