--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@
     <string name="Quit">Quit</string>
     <string name="wait_for_players">Waiting for all to finish</string>
     <string name="myClaim">Your claim is being voted on</string>
+    <string name="noAvailableRooms">Sorry no free rooms at this time!</string>
 </resources>
