--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="myClaim">Your claim is being voted on</string>
     <string name="noAvailableRooms">Sorry no free rooms at this time!</string>
     <string name="notLegitRoomToJoin">Sorry you cant join this room, try again</string>
+    <string name="roomNbr">Your room number is:</string>
 </resources>
