--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,5 @@
     <string name="noAvailableRooms">Sorry no free rooms at this time!</string>
     <string name="notLegitRoomToJoin">Sorry you cant join this room, try again</string>
     <string name="roomNbr">Your room number is:</string>
+    <string name="zero">0</string>
 </resources>
