Added and implemented confirm and save username buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,6 @@
     <string name="roomNbr">Your room number is:</string>
     <string name="zero">0</string>
     <string name="logo">logo</string>
+    <string name="name">name</string>
+    <string name="Username">Username</string>
 </resources>
